Start adding actual content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Thinking in Graphs</title>
+    <title>CDS and Security</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css" >
   </head>
@@ -10,7 +10,53 @@
 
 class: center, middle
 
+.logo[![CDS logo](images/cds_logo.png)]
+
 # CDS ❤ Security
+
+---
+
+class: center, middle
+
+# Canadian Digital Service
+
+* Deliver solutions: design, prototype, build
+* Build capacity: recruitment, learning
+* Provide advice: advice on best practices
+
+---
+
+class: center, middle
+
+# Buzzwords User/Human-centered Design
+
+.quote[<strong>Evaluating designs with users</strong> and improving them based on their feedback <strong>provides an effective means of minimizing the risk</strong> of a system not meeting user or organizational needs -- ISO 9241-210:2010]
+
+---
+class: center, middle
+
+# Buzzwords: Agile/Iterative development
+.quote[<strong>Iteration should be used to progressively eliminate uncertainty</strong> during the development of interactive systems. Iteration implies that descriptions, specifications and prototypes are revised and refined when new information is obtained <strong>in order to minimize the risk</strong> of the system under development failing to meet user requirements. -- ISO 9241-210:2010]
+
+---
+class: center, middle
+
+# Process tools to reduce risk
+* User/Human-centered Design
+* Agile/Iterative development
+
+# Technological tools to reduce risk
+* ...
+
+---
+
+class: center, middle
+
+* Automation is built on data
+* Open code and infrastructure as code tools turn systems into data
+* this data is the subtrate that security automation will be built on
+* app code, OS and infrastructure are required for assessment
+* tools like terraform/serverless close the gap between real world systems and network diagrams
 
 ---
 
