--- a/index.html
+++ b/index.html
@@ -12,51 +12,323 @@ class: center, middle
 
 .logo[![CDS logo](images/cds_logo.png)]
 
-# CDS ❤ Security
+# CDS & Security
 
 ---
 
 class: center, middle
 
-# Canadian Digital Service
+.seventy[![cio role](images/cds_launch.png)]
 
-* Deliver solutions: design, prototype, build
-* Build capacity: recruitment, learning
-* Provide advice: advice on best practices
+---
+class: center, middle
+
+.quote[The Government of Canada has an opportunity—and a responsibility—to deliver world-class services to Canadians. <strong>This will require disruption as we make the switch, both technically and culturally, to agile digital delivery models.</strong> To accelerate these efforts, I am excited to announce the launch of the Canadian Digital Service (CDS) to modernize the way the Government of Canada designs and delivers digital services. CDS will be a partner to departments in delivering measurably improved services. <strong>We are rethinking the service design and delivery process</strong> from the user’s perspective, and engaging users every step of the way. -- the Honourable Scott Brison]
+
+???
+At the ministerial level there is an appetite to explore process changes to increase the number of projects that are successfully delivered.
+---
+
+
+class: center, middle
+
+### "rethinking the service design and delivery process"
+
+* Agile/Iterative development
+* User/Human-centered Design
+* Devops
+* Continuous Delivery
 
 ---
 
 class: center, middle
 
-# Buzzwords User/Human-centered Design
+## User/Human-centered Design
 
 .quote[<strong>Evaluating designs with users</strong> and improving them based on their feedback <strong>provides an effective means of minimizing the risk</strong> of a system not meeting user or organizational needs -- ISO 9241-210:2010]
 
 ---
+
 class: center, middle
 
-# Buzzwords: Agile/Iterative development
+## Agile/Iterative development
+
 .quote[<strong>Iteration should be used to progressively eliminate uncertainty</strong> during the development of interactive systems. Iteration implies that descriptions, specifications and prototypes are revised and refined when new information is obtained <strong>in order to minimize the risk</strong> of the system under development failing to meet user requirements. -- ISO 9241-210:2010]
 
 ---
+
 class: center, middle
 
-# Process tools to reduce risk
-* User/Human-centered Design
-* Agile/Iterative development
+## Continuous Delivery
 
-# Technological tools to reduce risk
-* ...
+.sixty[![gds](./images/gds_reduce_risk.png)]
 
 ---
 
 class: center, middle
 
-* Automation is built on data
-* Open code and infrastructure as code tools turn systems into data
-* this data is the subtrate that security automation will be built on
-* app code, OS and infrastructure are required for assessment
-* tools like terraform/serverless close the gap between real world systems and network diagrams
+## Devops
+
+.quote[<strong>Lowering risk of change</strong> with tools and culture -- John Allspaw]
+
+.quote[DevOps culture blurs the line between the roles of developer and operations staff and may eventually eliminate the distinction. -- Martin Fowler]
+
+---
+
+class: center, middle
+
+## We want to build low risk systems
+
+---
+
+class: center, middle
+
+# CDS ❤  Security
+
+### Different process, same goal: secure systems
+
+---
+
+class: center, middle
+
+.quote[It’s important that we embrace Cloud, while addressing cybersecurity concerns. As we embrace Cloud, we can address security issues and we can do so by balancing the importance of security with excellent digital services. -- the Honourable Scott Brison]
+
+---
+
+class: center, middle
+
+## The Cloud
+
+.quote[An enabling technology is an invention or innovation, that can be applied to drive radical change in the capabilities of a user or culture. <strong>Enabling technologies are characterized by rapid development of subsequent derivative technologies, often in diverse fields</strong>. -- Wikipedia]
+
+---
+
+class: center, middle
+
+## Infrastructure as Code
+
+---
+class: center, middle
+
+### Infrastructure as Code: Terraform
+
+---
+class: middle
+
+```sh
+resource "aws_security_group" "elb" {
+  name        = "terraform_example_elb"
+  description = "Used in the terraform"
+  vpc_id      = "${aws_vpc.default.id}"
+
+  # HTTP access from anywhere
+  ingress {
+    from_port   = 80
+    to_port     = 80
+    protocol    = "tcp"
+    cidr_blocks = ["0.0.0.0/0"]
+  }
+
+  # outbound internet access
+  egress {
+    from_port   = 0
+    to_port     = 0
+    protocol    = "-1"
+    cidr_blocks = ["0.0.0.0/0"]
+  }
+}
+```
+
+---
+class: middle
+
+```sh
+resource "aws_instance" "web" {
+  connection {
+    # The default username for our AMI
+    user = "ubuntu"
+    # The connection will use the local SSH agent for authentication.
+  }
+  instance_type = "m1.small"
+  ami = "${lookup(var.aws_amis, var.aws_region)}"
+
+  # The name of our SSH keypair we created above.
+  key_name = "${aws_key_pair.auth.id}"
+
+  # Our Security group to allow HTTP and SSH access
+  vpc_security_group_ids = ["${aws_security_group.default.id}"]
+
+  # We're going to launch into the same subnet as our ELB. In a production
+  # environment it's more common to have a separate private subnet for
+  # backend instances.
+  subnet_id = "${aws_subnet.default.id}"
+
+  # We run a remote provisioner on the instance after creating it.
+  provisioner "remote-exec" {
+    inline = [
+      "sudo apt-get -y update",
+      "sudo apt-get -y install nginx",
+      "sudo service nginx start",
+    ]
+  }
+}
+```
+
+---
+class: middle
+
+```sh
+[mike@longshot two-tier]$ terraform apply
+aws_key_pair.auth: Creation complete (ID: default)
+aws_vpc.default: Creation complete (ID: vpc-db05a9bd)
+aws_internet_gateway.default: Creation complete (ID: igw-bc6dffdb)
+aws_subnet.default: Creation complete (ID: subnet-9076e3cb)
+aws_route.internet_access: Creation complete (ID: r-rtb-30f0c8561080289494)
+aws_security_group.default: Creation complete (ID: sg-2e610954)
+aws_security_group.elb: Creation complete (ID: sg-44660e3e)
+aws_instance.web: Creation complete (ID: i-00a6cb09321849fa3)
+aws_elb.web: Creation complete (ID: terraform-example-elb)
+
+Apply complete! Resources: 9 added, 0 changed, 0 destroyed.
+
+Outputs:
+
+address = terraform-example-elb-839046221.us-west-2.elb.amazonaws.com
+```
+
+---
+
+class: center, middle
+
+.ninety[![welcome to nginx](images/nginx.png)]
+
+---
+
+class: center, middle
+
+## When infrastructure is code
+
+* Entire environments are reproducible
+* No gap between what's documented & reality
+* Everything is auditable
+* Entire system is now data to enable security automation
+* Automated security means more security
+
+---
+
+class: center, middle
+
+## New ways to build
+
+---
+class: center, middle
+
+.quote[<strong>Language-theoretic security (LangSec) is a design and programming philosophy that focuses on formally correct and verifiable input handling</strong> throughout all phases of the software development lifecycle. In doing so, <strong>it offers a practical method of assurance of software free from broad and currently dominant classes of bugs and vulnerabilities</strong> related to incorrect parsing and interpretation of messages between software components. -- Langsec.org]
+
+---
+class: center, middle
+
+.quote[<strong>LangSec offers a unifying explanation for the existence of vulnerabilities and their continual perpetuation under current software design practices</strong> despite massive efforts at defining secure development practices. In short, the existence of exploitable bugs is a consequence of software designs that make verification and comprehensive testing infeasible and undecidable in the formal sense. -- Langsec.org]
+
+---
+
+class: center, middle
+
+## New ways to build: GraphQL
+
+* Advertised as "a query language for APIs"
+* Actually a user defined context-free grammar + parser & execution engine
+
+---
+
+class: center, middle, big_code
+
+```javascript
+describe('SQL injection', () => {
+  it('returns a SQL injected string', async () => {
+    let schema = new GraphQLSchema({
+      query: new GraphQLObjectType({
+        name: 'Query',
+        fields: () => ({
+          widgets: {
+            type: GraphQLString,
+            args: {
+              name: {
+                description: 'The name of the widget',
+                type: new GraphQLNonNull(GraphQLString)
+              }
+            },
+            resolve: (source, {name}) => `select * from widgets where name = '${name}';`
+          }
+        })
+      })
+    })
+ 
+    let query = ` query widgetByName($name: String!) { widgets(name: $name) } `
+    let result = await graphql(schema, query, null, null, {name: "foo'; drop table widgets; --"})
+    expect(result.data.widgets).toEqual("select * from widgets where name = 'foo'; drop table widgets; --'")
+  })
+})
+```
+
+---
+class: center, middle, big_code
+
+```javascript
+  let AlphabeticString = new GraphQLScalarType({
+    name: 'AlphabeticString',
+    description: 'represents a string with no special characters.',
+    serialize: String,
+    parseValue: (value) => {
+      if(value.match(/^([A-Za-z]|\s)+$/)) {
+        return value
+      }
+      return null
+    },
+    parseLiteral: (ast) => {
+      if(value.match(/^([A-Za-z]|\s)+$/)) {
+        return ast.value
+      }
+      return null
+    }
+  });
+```
+---
+
+
+class: center, middle, big_code
+
+```javascript
+it('is fixed with custom types', async () => {
+  let schema = new GraphQLSchema({
+    query: new GraphQLObjectType({
+      name: 'Query',
+      fields: () => ({
+        widgets: {
+          type: GraphQLString,
+          args: {
+            name: {
+              description: 'The name of the widget',
+              type: new GraphQLNonNull(AlphabeticString)
+            }
+          },
+          resolve: (source, {name}) => {
+            return `select * from widgets where name = '${name}';`
+          }
+        }
+      })
+    })
+  })
+  let query = ` query widgetByName($name: AlphabeticString!) { widgets(name: $name) } `
+  let result = await graphql(schema, query, null, null, {name: "foo'; drop table widgets; --"})
+  expect(result.errors[0].message).toInclude("got invalid value")
+})
+```
+---
+
+class: center, middle
+
+.quote[CDS isn’t going to fix everything, but it is a clear signal of our government’s reprioritization of its digital services. -- the Honourable Scott Brison]
 
 ---
 
@@ -65,9 +337,9 @@ class: center, middle
 # Questions?
 
 #### Mike Williamson
-* Github: @sleepycat
-* Twitter: @dexterchief
-* mike.williamson@tbs-sct.gc.ca
+* G: @sleepycat
+* T: @dexterchief
+* e: mike.williamson@tbs-sct.gc.ca
 
 
     </textarea>
