Add missing description of graphql

--- a/index.html
+++ b/index.html
@@ -325,6 +325,16 @@ it('is fixed with custom types', async () => {
 })
 ```
 ---
+class: center, middle
+
+## New ways to build: GraphQL
+
+* GraphQL is a powerful new security boundary
+* Schema applies to every system behind it
+* Schema gives a single point to audit
+* Benefits for those who spend the time on tight type definitions
+
+---
 
 class: center, middle
 
