Add speaker note

--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@ class: middle, center
 
 ## New tools: new visibility
 
+???
+We want full automation
+We are looking for latitude in return for visibility/legibility
 ---
 
 class: center, middle
